# nebula2-wildos

./: .gitattributes
ckpts/: c-radio_v3-b_half.pth.tar  frontier_ckpt.ckpt
ckpts/models--google--siglip2-so400m-patch16-naflex/refs/: main
ckpts/models--google--siglip2-so400m-patch16-naflex/snapshots/cc24074f717b612951c2dead130904ab9b65a81e/: config.json  model.safetensors  preprocessor_config.json  tokenizer.json  tokenizer_config.json
explorfm_trainer/annotation/: bbox_annotate.py  select-images.py
explorfm_trainer/configs/evaluation/: radio_ovts_clip.yaml
explorfm_trainer/configs/experiment/: gtour_radio_cnn.yaml  gtour_radio_cnn_new.yaml  rugd_radio_cnn.yaml  rugd_radio_cnn_adaptor.yaml
explorfm_trainer/scripts/: slurm_trainer.sh
explorfm_trainer/src/data/: grandtour_frontiers_datamodule.py  rugd_traversability_datamodule.py
explorfm_trainer/src/models/components/: radio_cnn.py
graphnav_msgs/: CMakeLists.txt  package.xml
graphnav_msgs/msg/: Edge.msg  EdgeTraversability.msg  KeyValue.msg  NavigationGraph.msg  Node.msg  NodeTraversabilityProperties.msg  UUID.msg
graphnav_planner/: CMakeLists.txt  package.xml
graphnav_planner/include/graphnav_planner/: planner.hpp
graphnav_planner/src/: path_follower_node.cpp  planner.cpp  planner_node.cpp
nvidia_radio/: .gitignore  geofrontiers_scoring.py  hubconf.py  radio_downstream.py  radio_downstream_onnx.py  rugd_ovts.py  rugd_traversability_frontiers.py  setup.py  test_naclip_ovss.py
nvidia_radio/radio/: adaptor_generic.py  adaptor_registry.py  dinov2_arch.py  hf_model.py  naclip.py  pamr.py  radio_model.py  siglip2_adaptor.py
torch-trainer/: .gitmodules
torch-trainer/annotation/: auto_mask_gen_gtour.py
torch-trainer/configs/evaluation/: radio_ovts.yaml
torch-trainer/configs/experiment/: gooseex_radio_cnn.yaml  gtour_radio_cnn_bbox.yaml  gtour_radio_cnn_new.yaml
torch-trainer/scripts/: slurm_eval.sh  slurm_trainer.sh
torch-trainer/src/data/: goose-ex_traversability_datamodule.py
torch-trainer/src/models/components/: radio_ovts.py
triangulation3d/: README.md  package.xml  setup.cfg  setup.py
triangulation3d/rviz/: teleop_triangulator_viz_conf.rviz  triangulator_viz_conf.rviz
triangulation3d/triangulation3d/: bbox_generator.py  camera_data.py  multicam_visualizer.py  particle_generator.py  pcl_utils.py  quantitative_metrics.py  random_cam_initializer.py  teleop_triangulation.py  teleop_twist_keyboard.py  triangulator.py
visual_navigation/: .gitmodules  package.xml  setup.py
visual_navigation/visual_navigation/geofrontier_nav/: nav.py
visual_navigation/visual_navigation/goalagnostic_geofrontier_nav/: nav.py
visual_navigation/visual_navigation/imgfrontier_nav/: nav.py  viz_net.py
